<resources>
    <string name="public_static_final_host_string_1">padding</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="CANCEL">取消</string>
    <string name="NO">否</string>
    <string name="OK">确定</string>
    <string name="RETRY">重试</string>
    <string name="YES">是</string>
    <string name="access_sd_fail">无法访问 SD 卡。</string>
    <string name="accessibility_mode_picker">相机、视频或全景模式选择器</string>
    <string name="accessibility_shutter_button">“快门”按钮</string>
    <string name="action_click_2_input">直接进入</string>
    <string name="action_loading_pic">正在加载抽奖活动图片...</string>
    <string name="action_loading_pic_failed">抽奖活动图片加载失败！</string>
    <string name="action_not_handle">没有执行该操作的应用程序</string>
    <string name="action_refresh_image">刷新图片</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_cancel">取 消</string>
    <string name="actionbar_edit">美 化</string>
    <string name="actionbar_finish">完 成</string>
    <string name="actionbar_give_up">放 弃</string>
    <string name="actionbar_next">完 成</string>
    <string name="actionbar_save">保 存</string>
    <string name="activity_no_data_notice">该活动目前还没有工友讨论，快发布动态吧</string>
    <string name="add_admin">您已被群主设为管理员！</string>
    <string name="add_contact">添加联系人</string>
    <string name="add_contact_accept_msg">我通过了你的朋友验证请求，现在我们可以开始聊天了</string>
    <string name="add_contact_already">已经是好友了，无需申请</string>
    <string name="add_contact_limit">当天不可重复申请</string>
    <string name="add_contact_sent">添加好友请求已发送</string>
    <string name="add_picture">添加照片</string>
    <string name="add_request_group">%1$s邀请您加入群%2$s</string>
    <string name="alert">提示</string>
    <string name="app_name"> 赶集网</string>
    <string name="audio_chat_invited">邀请您进行语音聊天</string>
    <string name="audio_download_failed">音频下载失败</string>
    <string name="audio_minimize_tip">最小化默认扬声器播放</string>
    <string name="audio_mode_speaker">当前是扬声器播放模式</string>
    <string name="auto_enhance">图像增强</string>
    <string name="auto_food">食物优化</string>
    <string name="auto_light_fill">补光</string>
    <string name="auto_none">无</string>
    <string name="auto_people">肖像增强</string>
    <string name="auto_string">增强</string>
    <string name="baidu_map_init_failed">百度地图初始化失败</string>
    <string name="call">呼叫</string>
    <string name="calling">正在%s聊天，请稍后再试</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="camera_disabled">由于安全政策的限制，相机已被停用。</string>
    <string name="camera_error_title">相机故障</string>
    <string name="camera_filter">滤镜</string>
    <string name="camera_flash_auto">自动</string>
    <string name="camera_flash_off">关闭</string>
    <string name="camera_flash_on">开启</string>
    <string name="camera_flash_open_always">常亮</string>
    <string name="camera_pic_preview">效果预览</string>
    <string name="cancel">取消</string>
    <string name="cannot_connect_camera">无法连接到相机。</string>
    <string name="captcha_verifying">验证中……</string>
    <string name="cardCancle">取消</string>
    <string name="cardDefaultuse">默认使用该卡支付</string>
    <string name="cardUnbing">解除绑定</string>
    <string name="certify_auth_now">立即授权</string>
    <string name="certify_cancel">取消</string>
    <string name="certify_company_code">企业注册号</string>
    <string name="certify_company_name">企业名称</string>
    <string name="certify_failed">认证未通过!</string>
    <string name="certify_hint_company">请输入企业名称</string>
    <string name="certify_hint_company_code">请输入企业注册号</string>
    <string name="certify_hint_legal_id">请输入法人身份证号</string>
    <string name="certify_hint_legal_name">请输入法人姓名</string>
    <string name="certify_legal_id">法人身份证号</string>
    <string name="certify_legal_name">法人姓名</string>
    <string name="certify_ok">确定</string>
    <string name="certify_retry">重新认证</string>
    <string name="certify_success">恭喜您认证通过!</string>
    <string name="certify_tip_id_has">请核对以下信息是否正确</string>
    <string name="certify_tip_id_input">请输入你的真实资料用于认证</string>
    <string name="change_random_code"><u>看不清，换一张</u></string>
    <string name="change_to_system_camera_confirm_button">确定</string>
    <string name="change_to_system_camera_confirm_text">手机硬件不支持五八相机哦，将为您调用系统相机</string>
    <string name="channel">CommonChannelInfo</string>
    <string name="chat">微聊</string>
    <string name="clear_historydata_successed">清除搜索历史记录成功</string>
    <string name="clientAgent" />
    <string name="clientTest">false</string>
    <string name="close">关闭</string>
    <string name="collect">我的收藏</string>
    <string name="collect_ask_2_clear_fav_info">确认清空收藏的信息？</string>
    <string name="collect_ask_2_delete_fav_info">确认删除收藏信息？</string>
    <string name="collect_clear">清空收藏</string>
    <string name="collect_clear_success">清空成功</string>
    <string name="collect_complete">完成</string>
    <string name="collect_no_data_2_edit">当前无可编辑的内容</string>
    <string name="collect_no_data_now">暂无收藏信息</string>
    <string name="collect_success">收藏成功！在个人中心可以查看</string>
    <string name="collect_success_first">"　　　　　　收藏成功！　　　　　　
在“赶集首页-个人中心-收藏”中查看"</string>
    <string name="collect_success_location">本地收藏成功</string>
    <string name="color_brightness">亮 度</string>
    <string name="color_contrast">对比度</string>
    <string name="color_saturation">饱和度</string>
    <string name="color_temperature">色 温</string>
    <string name="color_tone">色 调</string>
    <string name="commit">提交</string>
    <string name="compact">" "<u>我已阅读并同意《用户协议》</u></string>
    <string name="company_no_data_notice">"该厂目前还没有工友讨论，快发布动态
向工友们打听工厂内幕吧"</string>
    <string name="compare">对比</string>
    <string name="confirm">确定</string>
    <string name="confirm_title">提示</string>
    <string name="connected_cancel">挂断</string>
    <string name="connection_error_or_kickedoff">网络异常或已被踢下线</string>
    <string name="connection_status_connecting">正在连接…</string>
    <string name="connection_status_disconnected">无连接</string>
    <string name="connection_status_kickedoff">您已被踢下线</string>
    <string name="contact">联系人</string>
    <string name="contact_detail">详细资料</string>
    <string name="contacts_count">我的好友(%1$d)</string>
    <string name="copied">已复制</string>
    <string name="copy">复制</string>
    <string name="copy_message">复制消息</string>
    <string name="create_userinfo_step1">创建个人资料(%1$s)</string>
    <string name="crop_16_9">16:9</string>
    <string name="crop_3_4">3:4</string>
    <string name="crop_4_3">4:3</string>
    <string name="crop_9_16">9:16</string>
    <string name="crop_free_transform">自由变换</string>
    <string name="crop_save_text">确认</string>
    <string name="crop_square">正方形</string>
    <string name="customerId">801</string>
    <string name="default_album">默认相册</string>
    <string name="default_user_name">赶集网友</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_talk">删除该聊天</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="dialog_add_icor_to_screen">添加图标至主屏幕</string>
    <string name="dialog_affirm_exit_ganji">确定要退出赶集吗？</string>
    <string name="dialog_exit_ganji">退出赶集</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_title_prompt">提示</string>
    <string name="discover">发现</string>
    <string name="disslove_group">群主已将群%1$s解散！</string>
    <string name="drawShape">@string/drawShape_Circle</string>
    <string name="drawShape_Circle">Circle</string>
    <string name="drawShape_Rect">Rect</string>
    <string name="drawShape_RoundRect">RoundRect</string>
    <string name="edit_remark">编辑备注</string>
    <string name="edited_photo_bucket_name">系统</string>
    <string name="effect_backdropper_gallery">您的视频</string>
    <string name="effect_backdropper_space">太空背景</string>
    <string name="effect_backdropper_sunset">日落</string>
    <string name="effect_goofy_face_big_eyes">大眼睛</string>
    <string name="effect_goofy_face_big_mouth">大嘴巴</string>
    <string name="effect_goofy_face_big_nose">大鼻子</string>
    <string name="effect_goofy_face_small_eyes">小眼睛</string>
    <string name="effect_goofy_face_small_mouth">小嘴巴</string>
    <string name="effect_goofy_face_squeeze">面部哈哈镜</string>
    <string name="effect_none">无</string>
    <string name="enter_captcha">请输入图片验证码</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="error_invalid_local_path">错误的本地路径</string>
    <string name="error_json_parse">json解析失败</string>
    <string name="error_message_content_overflow">消息体过大</string>
    <string name="exit_group">用户名退出了群组%1$s</string>
    <string name="face_location">手动定位</string>
    <string name="favor">我的关注</string>
    <string name="favored">已关注</string>
    <string name="fetch_message_failed">历史消息拉取失败</string>
    <string name="file_format_not_support">不支持该格式文件的传输</string>
    <string name="filter_abao">洛丽塔</string>
    <string name="filter_abao_des">洛丽塔</string>
    <string name="filter_beauty">人 像</string>
    <string name="filter_beauty_Skin">自然美肤</string>
    <string name="filter_beauty_Skin_des">多种光效全方位打造自然哑光肌，白色柔和增加肌肤亮度，绿色减少面部潮红。适合面部红润或希望打造净白肌的美眉在光线较好的情况下拍摄，如果还想增加红润效果，请使用“天生丽质”</string>
    <string name="filter_beauty_filter1">天生丽质</string>
    <string name="filter_beauty_filter1_des">在原片的基础上适当磨皮并增加红润效果，犹如恋爱中女人幸福的绯色。在光线较好的情况下拍摄，可均匀肤色并适当掩盖瑕疵。适合本身肤质较好希望有柔光效果并略带红润的美眉选择。</string>
    <string name="filter_beauty_filter2">红粉佳人</string>
    <string name="filter_beauty_filter2_des">皮肤微微加了些粉色和白色，成像后皮肤更加光滑。</string>
    <string name="filter_beauty_filter3">逆光美人</string>
    <string name="filter_beauty_filter3_des">逆光下也能拍出美丽效果。</string>
    <string name="filter_beauty_filter4">亮丽白皙</string>
    <string name="got_it">知道了</string>
    <string name="hands_free">免提</string>
    <string name="invited_accept">接听</string>
    <string name="invited_refuse">拒绝</string>
    <string name="mute">静音</string>
    <string name="register_get_validatecode">获取验证码</string>
    <string name="register_pleaseinput_phonenumber">请输入手机号</string>
    <string name="register_pleaseinput_smsvalidatecode">请输入短信验证码</string>
    <string name="remark_info">备注信息</string>
    <string name="remark_name">备注名</string>
    <string name="remark_phone">电话号码</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="validate_send">验证并发送</string>
    <string name="video_continue">继续</string>
    <string name="video_to_audio">切到语音聊天</string>
</resources>