<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:orientation="vertical" android:background="#fff8f8f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="11.0sp" android:textColor="#ff999999" android:gravity="center_vertical" android:id="@id/prompt_title" android:background="#ffffffff" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/certify_tip_id_input" />
    <TableRow android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="#ffffffff" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.5dip" android:minHeight="47.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.5dip" android:text="@string/certify_company_name" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:textColorHint="#ffaaaaaa" android:id="@id/edt_company" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/certify_hint_company" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionNext" />
    </TableRow>
    <TableRow android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="#ffffffff" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.5dip" android:minHeight="47.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.5dip" android:text="@string/certify_company_code" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:textColorHint="#ffaaaaaa" android:id="@id/edt_company_code" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/certify_hint_company_code" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionNext" />
    </TableRow>
    <TableRow android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="#ffffffff" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.5dip" android:minHeight="47.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.5dip" android:text="@string/certify_legal_name" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:textColorHint="#ffaaaaaa" android:id="@id/edt_legal" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/certify_hint_legal_name" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionNext" />
    </TableRow>
    <TableRow android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="#ffffffff" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.5dip" android:minHeight="47.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.5dip" android:text="@string/certify_legal_id" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:textColorHint="#ffaaaaaa" android:id="@id/edt_legal_id" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/certify_hint_legal_id" android:singleLine="true" android:layout_weight="1.0" android:imeOptions="actionNext" />
    </TableRow>
    <TextView android:enabled="false" android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/authorize_button" android:background="@drawable/certify_zhima_btn" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="50.0dip" android:layout_marginRight="15.0dip" android:text="@string/certify_auth_now" />
</TableLayout>