<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0dip" android:textColor="#ff888888" android:gravity="center" android:id="@id/tv_dialog_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="15.0dip" />
    <View android:background="@color/gray_f6f6f6" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="30.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_two_btns" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dip" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_neg_btn" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:background="@color/gray_f6f6f6" android:layout_width="1.0dip" android:layout_height="44.0dip" />
        <TextView android:textSize="14.0dip" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_pos_btn" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/video_continue" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="14.0dip" android:textColor="@color/blue" android:gravity="center" android:id="@id/tv_neu_btn" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/got_it" />
</LinearLayout>