<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/g_dark_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_height="fill_parent" layout="@layout/titlebar" />
    <LinearLayout android:orientation="vertical" android:padding="@dimen/all_view_margin_left" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="13.0dip" android:gravity="center" android:layout_gravity="center" android:id="@id/text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RelativeLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="10.0dip">
            <Button android:textColor="@drawable/button_validate_color" android:id="@id/button_get_validate_code" android:background="@drawable/button_get_validate_bg" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:text="@string/register_get_validatecode" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <LinearLayout android:orientation="horizontal" android:background="@drawable/g_divider_group_bg_default" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_toLeftOf="@id/button_get_validate_code">
                <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:src="@drawable/ic_validate_msm_phone" />
                <EditText android:textSize="16.0dip" android:textColorHint="@color/g_light_grey" android:id="@id/edit_phone" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/register_pleaseinput_phonenumber" android:singleLine="true" android:maxLength="11" android:inputType="phone" android:imeOptions="actionNext" style="?android:attr/textViewStyle" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/g_divider_group_bg_default" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="10.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:src="@drawable/ic_validate_msm_key" />
            <EditText android:textSize="16.0dip" android:textColorHint="@color/g_light_grey" android:id="@id/edit_validate_code" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/register_pleaseinput_smsvalidatecode" android:singleLine="true" android:maxLength="20" android:inputType="phone" style="?android:attr/textViewStyle" />
        </LinearLayout>
        <Button android:textSize="15.0sp" android:textColor="@drawable/button_validate_send__color" android:gravity="center" android:layout_gravity="center" android:id="@id/button_start_validate" android:background="@drawable/button_validate_send" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/validate_send" />
    </LinearLayout>
</LinearLayout>