<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/minimize" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="25.0dip" android:src="@drawable/gmacs_ic_minimize" />
    <RelativeLayout android:id="@id/buttons_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_alignParentBottom="true" android:layout_centerVertical="true">
        <Button android:textSize="11.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/disconnect" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connected_cancel" android:drawableTop="@drawable/gmacs_ic_invited_refuse" android:drawablePadding="14.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <Button android:textSize="11.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/to_audio" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_to_audio" android:maxLines="1" android:drawableTop="@drawable/gmacs_ic_to_audio" android:drawablePadding="14.0dip" android:layout_toLeftOf="@id/disconnect" android:layout_centerVertical="true" />
        <Button android:textSize="11.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/switch_camera" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/switch_camera" android:maxLines="1" android:drawableTop="@drawable/gmacs_ic_switch_camera" android:drawablePadding="14.0dip" android:layout_toRightOf="@id/disconnect" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="13.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="31.0dip" android:layout_above="@id/buttons_container" android:layout_centerHorizontal="true" />
    <TextView android:textSize="14.0dip" android:textColor="@color/white" android:id="@id/network_status" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="28.0dip" android:layout_above="@id/time" android:layout_centerHorizontal="true" />
</RelativeLayout>