<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_video_invite_avatar" android:layout_width="@dimen/video_avatar_size" android:layout_height="@dimen/video_avatar_size" android:layout_marginLeft="15.0dip" android:layout_marginTop="17.5dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_toRightOf="@id/iv_video_invite_avatar" android:layout_alignTop="@id/iv_video_invite_avatar" android:layout_alignBottom="@id/iv_video_invite_avatar">
        <TextView android:textSize="24.0dip" android:textColor="@color/white" android:id="@id/tv_video_invite_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0dip" android:textColor="@color/white" android:id="@id/tv_video_action" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.wuba.android.wrtckit.view.LoopIncrementsTextView android:textSize="14.0dip" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/rl_video_btn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="11.0dip" android:textColor="@color/white" android:id="@id/btn_refuse" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invited_refuse" android:drawableTop="@drawable/gmacs_ic_invited_refuse" android:drawablePadding="14.0dip" />
        <Button android:textSize="11.0dip" android:textColor="@color/white" android:id="@id/btn_accept" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invited_accept" android:drawableTop="@drawable/gmacs_ic_invited_accept" android:drawablePadding="14.0dip" />
    </RelativeLayout>
    <Button android:textSize="11.0dip" android:textColor="@color/white" android:id="@id/btn_to_audio" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_to_audio" android:drawableTop="@drawable/gmacs_ic_video_invite_to_audio" android:drawablePadding="6.0dip" android:layout_above="@id/rl_video_btn" />
    <TextView android:textSize="14.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_invite_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
</RelativeLayout>